--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4"
   },
   "devDependencies": {
