--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,22 @@
     "start": "nodemon src/main.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lautaro Omar Lamalfa",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4"
+    "express-session": "^1.17.2",
+    "log4js": "^6.4.3",
+    "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.2",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.4.1",
+    "twilio": "^3.75.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
